<resources>
    <string name="app_name">TravelApp</string>
    <string name="intro_main_text">Let\'s Enjoy\n The Wonderful World</string>
    <string name="intro_sub_text">Discover new places in the world\n and gain fresh experiences</string>
    <string name="intro_button_text">Get Started</string>
    <string name="main_welcome_text">Welcome back</string>
    <string name="main_user_name">Arkar</string>
    <string name="main_description">Locate the perfect \ntravel destination</string>
    <string name="main_search_hint">Search Location...</string>
    <string name="main_popular">Popular</string>
    <string name="main_see_all">See all</string>
    <string name="main_category">Category</string>
    <string name="main_home">Home</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="miami">Miami</string>
    <string name="rating_text">0.0</string>
    <string name="bungalow_text">Bungalow with a great view</string>
    <string name="location">Location</string>
    <string name="bed_number">2 beds</string>
    <string name="guide">Guide</string>
    <string name="wifi">Wifi</string>
    <string name="description">Description</string>
    <string name="place_description">This 2 bed /1 bath home boasts an enormous\nopen-living plan, accented by striking\narchitectural features and high-end finished.\nFeel inspired by open sight lines that"\nembrace the outdoors, crowned by stunning"\ncoffered ceilings. "</string>
    <string name="book_now">Book Now</string>
    <string name="price">$1,200</string>
</resources>