<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="wrap_content"
                    android:layout_height="355dp"
                    android:src="@drawable/pic2"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/back_arrow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp" />

                <ImageView
                    android:id="@+id/favourite"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/fav"
                    app:layout_constraintTop_toTopOf="@id/back_arrow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/back_arrow"
                    android:layout_marginEnd="32dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bungalow_text"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="32sp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/marker2" />

                <TextView
                    android:id="@+id/detail_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"/>
                
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star2" />

                <TextView
                    android:id="@+id/detail_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.8"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="32dp"
                android:orientation="horizontal">
                
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="0.333"
                    android:layout_marginStart="32dp"
                    android:background="@drawable/border_background">
                    
                    <ImageView
                        android:id="@+id/bed_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/bed" />
                    
                    <TextView
                        android:id="@+id/bed_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bed_number"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@id/bed_icon"
                        app:layout_constraintStart_toEndOf="@id/bed_icon"
                        app:layout_constraintTop_toTopOf="@id/bed_icon" />
                    
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="0.333"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/border_background">

                    <ImageView
                        android:id="@+id/guide_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/guide" />

                    <TextView
                        android:id="@+id/guide_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guide"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@id/guide_icon"
                        app:layout_constraintStart_toEndOf="@id/guide_icon"
                        app:layout_constraintTop_toTopOf="@id/guide_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="0.333"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/border_background">

                    <ImageView
                        android:id="@+id/wifi_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/wifi" />

                    <TextView
                        android:id="@+id/wifi_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wifi"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@id/wifi_icon"
                        app:layout_constraintStart_toEndOf="@id/wifi_icon"
                        app:layout_constraintTop_toTopOf="@id/wifi_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                
            </LinearLayout>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="32dp" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:text="@string/place_description"
                android:textColor="@color/black"
                android:layout_marginEnd="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/price_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/price"
                    android:textStyle="bold"
                    android:textSize="34sp"
                    android:layout_gravity="clip_vertical"
                    android:textColor="@color/black"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/book_now"
                    style="@android:style/Widget.Button"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/intro_background"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_weight="0.5"/>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>