<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">
    
    <ImageView
        android:id="@+id/popular_image"
        android:layout_width="250dp"
        android:layout_height="230dp"
        android:src="@drawable/pic1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/white_half_background">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:singleLine="true"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/marker" />
        
        <TextView
            android:id="@+id/popular_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/miami"
            android:singleLine="true"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/score_text"
            app:layout_constraintBottom_toBottomOf="@id/imageView10"
            app:layout_constraintTop_toTopOf="@id/imageView10"
            app:layout_constraintStart_toEndOf="@id/imageView10" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_text"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/popular_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/popular_location" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/score_text"
            app:layout_constraintBottom_toBottomOf="@id/score_text"
            app:layout_constraintEnd_toStartOf="@id/score_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>